feat: ejections from retrosheet (etl, repo, routes)
